Project all and details

--- a/src/public/css/component/article.css
+++ b/src/public/css/component/article.css
@@ -127,3 +127,12 @@
     width: 100%;
     display: flex;
 }
+
+.article-actions__button-link-icon {
+    font-size: 1.728em;
+    color: #17936F;
+}
+
+.article-actions__buttons-link {
+    margin-right: 20px;
+}
