--- a/views/project/ajouter.ejs
+++ b/views/project/ajouter.ejs
@@ -31,7 +31,7 @@
                 <input type="file" name="media-file" id="media-file">
             </div>
         </div>
-        <h2 class="form-subtitle">Categorie</h2>
+        <h2 class="form-subtitle">Catégorie</h2>
         <div class="form-inner">
             <select name="category-select" id="category-select" class="form-inner__select">
                 <% for (let i = 0; i < data['categories'].length; i++) { %>
