--- a/views/project/accueil.ejs
+++ b/views/project/accueil.ejs
@@ -53,7 +53,7 @@
                 <% } %>
                 <div class="article-content">
                     <div class="article-content__details">
-                        <a href="<%= data['projects'][i]._id %>" class="article-content__title-link">
+                        <a href="projet/details/<%= data['projects'][i]._id %>" class="article-content__title-link">
                             <h3 class="article-content__title"><%= data['projects'][i].title %></h3>
                         </a>
                         <a href="projet/category/<%= data['projects'][i].category._id %>" class="article-content__category-link"><%= data['projects'][i].category.name %></a>
