--- a/views/include/head.ejs
+++ b/views/include/head.ejs
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-signin-client_id" content="753546703594-s8glhlfcilncqr5o30dkng1h67urn4bd.apps.googleusercontent.com">
     <meta name="mobile-web-app-capable" content="yes">
+    <link rel="shortcut icon" href="/src/public/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="/src/public/css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
