--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -1,12 +1,12 @@
 <header class="main-header">
-    <a href="accueil.html" class="main-header__logo-link">
+    <a href="/" class="main-header__logo-link">
         <img src="/src/public/img/logo-mymedia.svg" alt="myMédia logo" class="main-header__logo">
     </a>
     <nav class="main-header__nav">
         <ul class="main-header__list">
             <li class="main-header__item"><a href="/" class="main-header__item-link">Accueil</a></li>
             <li class="main-header__item"><a href="/projet/ajouter" class="main-header__item-link">Ajouter</a></li>
-            <li class="main-header__item"><a href="#" class="main-header__item-link">Découvrir</a></li>
+            <li class="main-header__item"><a href="/projet/decouvrir" class="main-header__item-link">Découvrir</a></li>
             <li class="main-header__item" id="profil-list-item"><a href="#" class="main-header__item-link">Mon profil</a></li>
             <li class="main-header__item"><div class="g-signin2" data-onsuccess="onSignIn"></div></li>
             <li class="main-header__item"><a href="#" class="main-header__item-link" onclick="signOut();"><i class="fas fa-sign-out-alt"></i></a></li>
