--- a/src/public/css/component/main-section.css
+++ b/src/public/css/component/main-section.css
@@ -34,3 +34,9 @@ article:last-child {
 .project-comment:last-child {
     margin-bottom: 0;
 }
+
+@media screen and (max-width: 1000px) {
+    .main-section {
+        grid-template-columns: 1fr 20fr 1fr;
+    }
+}
